  syn.cubertnorm(), syn.normrank(), syn.pmm().
* syn.cubertnorm() now allows negative values.
* In multi.compare() if `msel = NULL`, pooled synthetic data copies are 
  compared with the original data.  
* Parameter `incomplete` added to summary.fit.synds() function.  
* In syn.ipf() default value of `tol` parameter changed to 1e-3 in order to 
  speed up convergence.  
  
BUG FIXES
* In multi.compare() default colour and fill scales restored for ggplot() to
  allow for more than 9 levels/synthetic data sets to be plotted.
* Automatic detection of incomplete synthesis.
* Formatting of labels for ploting numeric variables in compare.synds() that
  could create duplicated values.
* Subsetting of columns in data frames that are also tibbles.  


synthpop 1.7-0
---------------

NEW FEATURES
* New function utility.tables() summarises oneway, two- or three-way tables 
  of utility by utility.tab(). Plots and tables of utility measures can be 
  produced.
* Functions utility.gen(), utility.tab(), and compare.synds() can be used 
  to assess the utility of synthetic data sets that were created NOT using 
  synthpop. They have to be provided as a data.frame or a list.
* utility.gen() and utility.tab() have a parameter `k.syn` to indicate that 
  the sample size itself has been synthesised. The default value is `FALSE` 
  that will apply to synthetic data created by synthpop. 
* The following additional statstics for each synthesis are calculated in 
  utility.tab(): "G" - the adjusted likelihood ratio chi-squared statistic 
  for comparing tables with original and synthesised values, 
  "JSD" - the Jensen-Shannon distance between the tables with original and 
* These additional statistics are computed by utility.tab() and utility.gen(): 
  "PO50" - the percentage over 50% of each synthetic data set where the model 
  used to predict real or synthetic is correct; "SPECKS" the Kolmogorov-Smirnov 
  distance comparing the prpensity scores for the synthetic and original data.