@@ -20,7 +20,8 @@ CHANGES
   compared with the original data.  
 * Parameter `incomplete` added to summary.fit.synds() function.  
 * In syn.ipf() default value of `tol` parameter changed to 1e-3 in order to 
-  speed up convergence.  
+  speed up convergence.
+* Sublist elements of structural zero list must be named.
   
 BUG FIXES
 * In multi.compare() default colour and fill scales restored for ggplot() to
@@ -29,7 +30,7 @@ BUG FIXES
 * Formatting of labels for ploting numeric variables in compare.synds() that
   could create duplicated values.
 * Subsetting of columns in data frames that are also tibbles.  
-
+* Handling of special characters in variable names.
 
 synthpop 1.7-0
 ---------------
